other-vpol/limit-configmap-for-sa/.kyverno-test/userinfo.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
userInfo:
  username: system:serviceaccount:another-namespace:another-developer
